tests/fail/registering/assertion formula without provable sort.mm0
sort s;
term a :s;
-- provable means that the sort is a thing that can be "proven". All formulas appearing in axioms and theorems (between $) must have a provable sort
axiom b (x:s): $ a $;
